# nav

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  index.html
.github/workflows/: build.yml  doxygen.yml
0.1.0/: annotated.html  annotated_dup.js  audioformat_8h_source.html  dir_b96266fe1c09af46c749957a1ae43785.html  functions_vars.html  index.html  nav_8h_source.html  navtreedata.js
0.1.0/search/: all_3.js  files_0.js  pages_0.js
0.2.0/: classes.html  dir_b96266fe1c09af46c749957a1ae43785.js  functions.html  globals.html  input_8h_source.html  nav_8h.js
0.2.0/search/: functions_0.js
0.3.0/: classes.html  dir_b96266fe1c09af46c749957a1ae43785.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  menudata.js  nav_8h.html  nav_8h.js  nav_8h_source.html  navtreedata.js  navtreeindex0.js  structnav__input.html  structnav__input.js  structnav__settings.html  types_8h_source.html
0.3.0/search/: all_5.js  all_b.js  classes_0.js  functions_0.js  searchdata.js
cmake/: FindFFmpeg.cmake
examples/: convert_to_wav.cpp
include/nav/: attributes.h  audioformat.h  input.h  nav.h  types.h
main/: annotated.html  annotated_dup.js  attributes_8h_source.html  audioformat_8h_source.html  dir_b96266fe1c09af46c749957a1ae43785.js  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  index.html  nav_8h.html  nav_8h.js  nav_8h_source.html  navtreedata.js  navtreeindex0.js  structnav__settings.html  types_8h_source.html
main/search/: all_0.js  all_1.js  all_3.js  all_5.js  all_7.js  all_8.js  classes_0.js  functions_0.js  searchdata.js  variables_3.js
src/: Backend.cpp  Backend.hpp  Common.cpp  Common.hpp  DynLib.cpp  Error.cpp  Error.hpp  InputFile.cpp  InputFile.hpp  InputFileAndroid.cpp  InputMemory.cpp  InputMemory.hpp  Internal.cpp  Internal.hpp  NAV.cpp  NAVConfig.hpp  config.h.in  multiffmpegconfig.h.in  nav.cpp  nav_backend.cpp  nav_backend.hpp  nav_backend_androidndk.cpp  nav_backend_androidndk.hpp  nav_backend_androidndk_funcptr.h  nav_backend_androidndk_internal.hpp  nav_backend_ffmpeg.cpp  nav_backend_ffmpeg.hpp  nav_backend_ffmpeg_funcptr.h  nav_backend_ffmpeg_internal.hpp  nav_backend_gstreamer.cpp  nav_backend_gstreamer.hpp  nav_backend_gstreamer_funcptr.h  nav_backend_gstreamer_internal.hpp  nav_backend_mediafoundation.cpp  nav_backend_mediafoundation.hpp  nav_backend_mediafoundation_internal.hpp  nav_common.cpp  nav_common.hpp  nav_config.hpp  nav_dynlib.cpp  (+8 more)
src/androidndk/: AndroidNDKBackend.cpp  AndroidNDKBackend.hpp  AndroidNDKInternal.hpp
src/ffmpeg4/: FFmpeg4Backend.cpp  FFmpeg4Backend.hpp
src/ffmpeg5/: FFmpeg5Backend.cpp  FFmpeg5Backend.hpp
src/ffmpeg6/: FFmpeg6Backend.cpp  FFmpeg6Backend.hpp  FFmpeg6Internal.hpp  FFmpeg6Pointers.h
src/ffmpeg7/: FFmpeg7Backend.cpp  FFmpeg7Backend.hpp
src/ffmpeg8/: FFmpeg8Backend.cpp  FFmpeg8Backend.hpp
src/ffmpeg_common/: FFmpegBackend.cpp  FFmpegBackend.hpp  FFmpegCommon.hpp  FFmpegInternal.hpp  FFmpegPointers.h  FFmpegSetup.h
src/gstreamer/: GStreamerBackend.cpp  GStreamerBackend.hpp  GStreamerInternal.hpp  GStreamerPointers.h
src/mediafoundation/: MediaFoundationBackend.cpp  MediaFoundationBackend.hpp  MediaFoundationInternal.hpp  MediaFoundationPointers.h
